2008-05-02  Juanma Barranquero  <lekktu@gmail.com>

	* gmm-utils.el (gmm, gmm-verbose, gmm-lazy, gmm-customize-mode)
	(gmm-image-load-path-for-library): Fix typos in docstrings.
	(gmm-message): Reflow docstring.

2008-04-28  Teodor Zlatanov  <tzz@lifelogs.com>

	* mail-source.el (mail-source-set-1, mail-source-bind): Moved
	auth-source code out of the macro to clean it up and fix bugs.

2008-04-26  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-split-fancy-with-parent): Don't split
	by sender if it's equal to user-mail-address, it's likely to be
	useless.

	* mail-source.el (mail-source-bind): Don't use user or password if they
	are not bound.  Unintern them if they are nil.  Don't use server unless
	it's bound, and default it to empty string otherwise.

2008-04-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* mail-source.el: Load auth-source.el.
	(mail-source-bind): Add comments.  Call auth-source-user-or-password to
	get user name or password, if auth-sources is set up.

	* gnus-registry.el (gnus-registry-split-strategy): New variable for
	strategy of splitting with parent.
	(gnus-registry-split-fancy-with-parent)
	(gnus-registry-post-process-groups): Use it and fix prior
	bug (returning a list as the split result).

	* auth-source.el (auth-sources): Remove server parameter.
	(auth-source-pick, auth-source-user-or-password)
	(auth-source-user-or-password-imap)
	(auth-source-user-or-password-pop3, auth-source-user-or-password-ssh)
	(auth-source-user-or-password-sftp)
	(auth-source-user-or-password-smtp): Remove server parameter.

2008-04-25  Juanma Barranquero  <lekktu@gmail.com>

	* smime.el (smime-sign-region, smime-encrypt-region)
	(smime-decrypt-region):
	Remove redundant calls to `generate-new-buffer-name'.

2008-04-24  Luca Capello  <luca@pca.it>  (tiny change)

	* mm-encode.el (mm-safer-encoding): Add optional argument `type'.
	Don't use QP for message/rfc822.
	(mm-content-transfer-encoding): Pass `type' to mm-safer-encoding.
